fix problem of scrolled down view jumping to top before transition

--- a/source/sass/_utilities.scss
+++ b/source/sass/_utilities.scss
@@ -107,7 +107,8 @@
 .fullscreen {
   top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
+  bottom: 0;
+  overflow-y: auto;
   position: absolute;
 }
