--- a/source/sass/pages/_users.scss
+++ b/source/sass/pages/_users.scss
@@ -6,6 +6,7 @@
 
 .main-user-text {
   margin-bottom: 1rem;
+  margin-left: 2rem;
 }
 
 @media screen and  (max-width: 480px) {
@@ -46,7 +47,6 @@
 .main-user-img {
   width: 250px;
   height: 250px;
-  margin-right: 2rem;
   border-radius: 50%;
 }
 
@@ -58,8 +58,7 @@
 }
 
 .user-wrap {
-  background: url('user-bg.svg') no-repeat top center $gray;
-  background-size: cover;
+  background: url('user-bg.svg') top center $gray;
 }
 
 .user {
